hphp/hack/test/typecheck/reactive/rx_if_implements18.php.exp
File "rx_if_implements18.php", line 20, characters 28-34:
The method `mayberx` is not compatible with the overridden method (Typing[4341])
  File "rx_if_implements18.php", line 15, characters 28-34:
  This function is conditionally shallow reactive (condition type: \Rx1).
  File "rx_if_implements18.php", line 20, characters 28-34:
  This function is conditionally shallow reactive (condition type: \Rx2).
